[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "edwin",email = "12edwinho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "llama-index (>=0.12.12,<0.13.0)",
    "llama-index-readers-file (>=0.4.3,<0.5.0)",
    "pymupdf (>=1.25.2,<2.0.0)",
    "llama-index-vector-stores-postgres (>=0.4.1,<0.5.0)",
    "llama-index-embeddings-huggingface (>=0.5.1,<0.6.0)",
    "llama-index-llms-llama-cpp (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
